--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tanstack/react-query": "^5.61.3",
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "qs": "^6.13.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-background-fetch": "^4.2.5",
@@ -45,6 +47,7 @@
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "0.74.84",
     "@react-native/typescript-config": "0.74.84",
+    "@types/qs": "^6.9.17",
     "@types/react": "^18.2.6",
     "@types/react-native-actionsheet": "^2.4.7",
     "@types/react-native-indicators": "^0.16.6",
