--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
     "i18next": "^25.0.0",
+    "libphonenumber-js": "^1.12.8",
     "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
     "patch-package": "^8.0.0",
@@ -38,6 +39,7 @@
     "react-native-audio-record": "^0.2.2",
     "react-native-device-info": "^14.0.4",
     "react-native-document-picker": "^4.2.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-file-picker": "^0.0.21",
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
@@ -45,8 +47,10 @@
     "react-native-hyperlink": "^0.0.22",
     "react-native-image-picker": "^8.2.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
+    "react-native-international-phone-number": "^0.9.3",
     "react-native-invoke-app": "^1.0.6",
     "react-native-loader-kit": "^2.0.8",
+    "react-native-pager-view": "^6.8.1",
     "react-native-permissions": "^5.0.1",
     "react-native-push-notification": "^8.1.1",
     "react-native-responsive-fontsize": "^0.5.1",
@@ -57,6 +61,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.11.2",
+    "react-native-tab-view": "^4.1.1",
     "react-native-webview": "^13.10.4",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
