--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/crashlytics": "^20.1.0",
     "@react-native-firebase/messaging": "^20.1.0",
+    "@react-native-google-signin/google-signin": "^14.0.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
