--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@videosdk.live/react-native-sdk": "^0.1.17",
     "axios": "^1.7.2",
     "babel-plugin-module-resolver": "^5.0.2",
+    "date-fns": "^4.1.0",
     "i18next": "^25.0.0",
     "libphonenumber-js": "^1.12.8",
     "lottie-react-native": "^7.2.2",
