--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/crashlytics": "^20.1.0",
     "@react-native-firebase/messaging": "^20.1.0",
     "@react-native-google-signin/google-signin": "^14.0.1",
+    "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
