--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -46,3 +46,5 @@ MYAPP_UPLOAD_STORE_FILE=naraakumClient.keystore
 MYAPP_UPLOAD_KEY_ALIAS=naraakumClient
 MYAPP_UPLOAD_STORE_PASSWORD=naraakumClient
 MYAPP_UPLOAD_KEY_PASSWORD=naraakumClient
+
+android.suppressUnsupportedCompileSdk=36
