--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,6 +122,7 @@ dependencies {
     // implementation project(':react-native-file-viewer')
     implementation project(':react-native-splash-screen')
     implementation "androidx.work:work-runtime-ktx:2.8.1"
+    implementation project(':react-native-linear-gradient')
 
     implementation project(':rnwebrtc')
 
