--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-international-phone-number": "^0.9.3",
     "react-native-invoke-app": "^1.0.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-loader-kit": "^2.0.8",
     "react-native-pager-view": "^6.8.1",
     "react-native-permissions": "^5.0.1",
