--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "libphonenumber-js": "^1.12.8",
     "lottie-react-native": "^7.2.2",
     "moment": "^2.30.1",
+    "moment-hijri": "^3.0.0",
     "patch-package": "^8.0.0",
     "qs": "^6.13.1",
     "react": "18.2.0",
@@ -66,6 +67,7 @@
     "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.11.2",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^4.1.1",
     "react-native-webview": "^13.10.4",
     "react-redux": "^9.1.2",
