--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@invertase/react-native-apple-authentication": "^2.4.1",
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^20.1.0",
@@ -56,6 +57,7 @@
     "react-native-invoke-app": "^1.0.6",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-loader-kit": "^2.0.8",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "^6.8.1",
     "react-native-permissions": "^5.0.1",
     "react-native-push-notification": "^8.1.1",
