--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -123,7 +123,7 @@ dependencies {
     implementation project(':react-native-splash-screen')
     implementation "androidx.work:work-runtime-ktx:2.8.1"
     implementation project(':react-native-linear-gradient')
-
+    implementation project(':react-native-html-to-pdf')
     implementation project(':rnwebrtc')
 
      implementation 'com.google.firebase:firebase-crashlytics:18.2.13'
