--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-firebase/app": "^20.1.0",
@@ -50,6 +51,7 @@
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-image-picker": "^8.2.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
@@ -57,6 +59,7 @@
     "react-native-invoke-app": "^1.0.6",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-loader-kit": "^2.0.8",
+    "react-native-maps": "^1.24.3",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "^6.8.1",
     "react-native-permissions": "^5.0.1",
@@ -65,12 +68,14 @@
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
+    "react-native-share": "^12.1.0",
     "react-native-simple-toast": "^3.3.2",
     "react-native-sound": "^0.11.2",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^15.11.2",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^4.1.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.10.4",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
