--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,7 +19,7 @@
 node_require('react-native/scripts/react_native_pods.rb')
 node_require('react-native-permissions/scripts/setup.rb')
 
-platform :ios, min_ios_version_supported
+platform :ios, 15.1
 prepare_react_native_project!
 
 setup_permissions([
@@ -67,18 +67,12 @@ target 'Naraakum_client' do
 
   pod 'RNInAppBrowser', :path => '../node_modules/react-native-inappbrowser-reborn'
   pod 'react-native-webrtc', :path => '../node_modules/@videosdk.live/react-native-webrtc'
-  pod 'GoogleSignIn', '~> 7.0'
+  pod 'GoogleSignIn', '~> 8.0'
+  # pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 
-  pod 'Firebase/Core',:modular_headers => true
-  pod 'Firebase/Messaging',:modular_headers => true
-  pod 'FirebaseCoreInternal',:modular_headers => true
-  pod 'GoogleUtilities',:modular_headers => true
-  pod 'Firebase/Crashlytics'
-
-  target 'Naraakum_clientTests' do
-    inherit! :complete
-    # Pods for testing
-  end
+  pod 'RNFBApp', :path => '../node_modules/@react-native-firebase/app'
+  pod 'RNFBCrashlytics', :path => '../node_modules/@react-native-firebase/crashlytics'
+  pod 'RNFBMessaging', :path => '../node_modules/@react-native-firebase/messaging'
 
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
