--- a/ios/Naraakum_client.xcodeproj/xcshareddata/xcschemes/Naraakum_client.xcscheme
+++ b/ios/Naraakum_client.xcodeproj/xcshareddata/xcschemes/Naraakum_client.xcscheme
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "Naraakum_clientTests.xctest"
+               BuildableName = "Naraakum_clientTests"
                BlueprintName = "Naraakum_clientTests"
                ReferencedContainer = "container:Naraakum_client.xcodeproj">
             </BuildableReference>
