working upgration in ios

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -47,6 +47,9 @@
       android:launchMode="singleTask"
       android:theme="@style/AppTheme"
       android:supportsRtl="true">
+      <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyDrIDwxB952Xv0ogIH6ytLJ_iKfxfadfEM"/>
       <!-- Change the value to true to enable pop-up for in foreground on receiving remote notifications (for prevent duplicating while showing local notifications set this to false) -->
         <meta-data  android:name="com.dieam.reactnativepushnotification.notification_foreground"
                     android:value="false"/>
