--- a/ios/Naraakum_client/Info.plist
+++ b/ios/Naraakum_client/Info.plist
@@ -20,6 +20,8 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>GMSApiKey</key>
+	<string>AIzaSyDrIDwxB952Xv0ogIH6ytLJ_iKfxfadfEM</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
