--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-native-svg": "^15.12.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^4.1.2",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.15.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
@@ -98,6 +99,7 @@
     "@types/react-native-actionsheet": "^2.4.7",
     "@types/react-native-indicators": "^0.16.6",
     "@types/react-native-push-notification": "^8.1.4",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
