Home dialysis flow

--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@videosdk.live/react-native-sdk": "^0.3.7",
     "axios": "^1.10.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "base-64": "^1.0.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "i18next": "^25.2.1",
     "libphonenumber-js": "^1.12.9",
@@ -51,6 +53,7 @@
     "react-native-file-viewer": "^2.1.5",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.26.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-image-picker": "^8.2.1",
@@ -93,6 +96,8 @@
     "@react-native/eslint-config": "0.80.0",
     "@react-native/metro-config": "0.80.0",
     "@react-native/typescript-config": "0.80.0",
+    "@types/base-64": "^1.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.13",
     "@types/qs": "^6.9.17",
     "@types/react": "^19.1.0",
