--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-android-open-settings": "^1.3.0",
     "react-native-audio-recorder-player": "^3.6.14",
     "react-native-device-info": "^14.0.4",
+    "react-native-document-picker": "^9.3.1",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-file-picker": "^0.0.21",
     "react-native-file-viewer": "^2.1.5",
