--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-documents/picker": "^10.1.5",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/crashlytics": "^20.1.0",
     "@react-native-firebase/messaging": "^20.1.0",
@@ -48,7 +49,6 @@
     "react-native-android-open-settings": "^1.3.0",
     "react-native-audio-recorder-player": "^3.6.14",
     "react-native-device-info": "^14.0.4",
-    "react-native-document-picker": "^9.3.1",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-file-picker": "^0.0.21",
     "react-native-file-viewer": "^2.1.5",
@@ -79,7 +79,6 @@
     "react-native-svg": "^15.12.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^4.1.2",
-    "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.15.0",
     "react-redux": "^9.2.0",
@@ -90,7 +89,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
+    "@babel/runtime": "^7.27.6",
     "@react-native-community/cli": "19.0.0",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
