--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -41,6 +41,7 @@ newArchEnabled=false
 hermesEnabled=true
 
 android.enableDexingArtifactTransform=true
+android.suppressUnsupportedCompileSdk=36
 
 MYAPP_UPLOAD_STORE_FILE=naraakumClient.keystore
 MYAPP_UPLOAD_KEY_ALIAS=naraakumClient
