--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,7 +122,6 @@ dependencies {
     // implementation project(':react-native-file-viewer')
     implementation project(':react-native-splash-screen')
     implementation "androidx.work:work-runtime-ktx:2.8.1"
-
     implementation project(':rnwebrtc')
 
      implementation 'com.google.firebase:firebase-crashlytics:18.2.13'
@@ -132,6 +131,21 @@ dependencies {
         }
     }
     implementation 'com.airbnb.android:lottie:6.1.0'
+    
+    // Add missing React Native dependencies for gesture handler compatibility
+    implementation "com.facebook.react:react-native:0.74.2"
+    
+    // Force specific versions of androidx.core to avoid AAR metadata issues
+    implementation("androidx.core:core") {
+        version {
+            strictly("1.12.0")
+        }
+    }
+    implementation("androidx.core:core-ktx") {
+        version {
+            strictly("1.12.0")
+        }
+    }
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
