--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native": "0.80.0",
     "react-native-android-open-settings": "^1.3.0",
     "react-native-audio-recorder-player": "^3.6.14",
+    "react-native-config": "^1.5.5",
     "react-native-device-info": "^14.0.4",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-file-picker": "^0.0.21",
@@ -55,6 +56,7 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.26.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-image-picker": "^8.2.1",
