--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-native-svg": "^15.12.0",
     "react-native-svg-uri": "^1.2.3",
     "react-native-tab-view": "^4.1.2",
+    "react-native-track-player": "^4.1.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.15.0",
     "react-redux": "^9.2.0",
